<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip"
        android:hint="@string/title" />

    <EditText
        android:id="@+id/text_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_title"
        android:layout_margin="10dip"
        android:gravity="top"
        android:hint="@string/content" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="220dp"
        android:layout_height="180dp"
        android:layout_below="@+id/text_content"
        android:layout_centerHorizontal="true"
        android:scaleType="centerInside"
        android:src="@drawable/photo_frame_bg" />

    <LinearLayout
        android:id="@+id/image_button_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#cccccccc"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="3dp" >

        <Button
            android:id="@+id/save_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="saveNote"
            android:text="@string/label_save_button" />
    </LinearLayout>

</RelativeLayout>