<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F7F9" >

    <!-- <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true" > -->

        <LinearLayout
            android:id="@+id/llRegistration"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerInParent="true"
            android:background="@color/home_background"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imgviewLoginLogo"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:contentDescription="@null"
                android:src="@drawable/login_logo" />

            <LinearLayout
                android:id="@+id/llUserLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <com.assignit.android.ui.views.CustomEditText
                    android:id="@+id/etName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/apptheme_textfield_activated_holo_light"
                    android:clickable="true"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz "
                    android:ems="10"
                    android:focusable="true"
                    android:freezesText="true"
                    android:gravity="center"
                    android:hint="@string/enter_name"
                    android:imeOptions="actionDone"
                    android:inputType="textCapWords"
                    android:paddingBottom="5dp"
                    android:singleLine="true"
                    android:textColor="@color/black_color"
                    android:textSize="20sp" >
                </com.assignit.android.ui.views.CustomEditText>

                <RelativeLayout
                    android:id="@+id/rlGetCode"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="3dp"
                    android:paddingRight="3dp" >

                    <com.assignit.android.ui.views.CustomEditText
                        android:id="@+id/etCountryCode"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:layout_toLeftOf="@+id/etPhoneNumber"
                        android:background="@drawable/apptheme_textfield_activated_holo_light"
                        android:digits="0123456789"
                        android:ems="4"
                        android:editable="false"
                        android:cursorVisible="false"
                        android:focusableInTouchMode="false"
                        android:focusable="false"
                        android:freezesText="true"
                        android:gravity="center"
                        android:hint="@string/country_code"
                        android:paddingBottom="5dp"
                        android:singleLine="true"
                        android:textColor="@color/black_color"
                        android:textSize="18sp" />

                    <com.assignit.android.ui.views.CustomEditText
                        android:id="@+id/etPhoneNumber"
                        android:layout_width="158dp"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginRight="8dp"
                        android:background="@drawable/apptheme_textfield_activated_holo_light"
                        android:clickable="true"
                        android:digits="0123456789"
                        android:ems="6"
                        android:focusable="true"
                        android:freezesText="true"
                        android:gravity="center"
                        android:hint="@string/phone_number"
                        android:imeOptions="actionDone"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:paddingBottom="5dp"
                        android:singleLine="true"
                        android:textColor="@color/black_color"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/btnGetCode"
                        android:layout_width="wrap_content"
                        android:layout_height="33dp"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/etPhoneNumber"
                        android:background="@drawable/apptheme_btn_default_holo_light"
                        android:ems="2"
                        android:enabled="false" />
                </RelativeLayout>

                <com.assignit.android.ui.views.CustomEditText
                    android:id="@+id/etVerifyCode"
                    android:layout_width="158dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/apptheme_textfield_activated_holo_light"
                    android:clickable="true"
                    android:ems="6"
                    android:focusable="true"
                    android:freezesText="true"
                    android:gravity="center"
                    android:hint="@string/verify_code"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLength="4"
                    android:paddingBottom="5dp"
                    android:textColor="@color/black_color"
                    android:textSize="20sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/selector_btn_verify_code"
                android:enabled="false" />
        </LinearLayout>
   <!--  </ScrollView> -->

    <RelativeLayout
        android:id="@+id/rlCountryList"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="@color/home_background"
        android:visibility="gone" >

        <com.assignit.android.ui.views.alphabeticalIndex.Listview.IndexableListView
            android:id="@+id/mCountryCodeListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:cacheColorHint="@android:color/transparent"
            android:divider="@android:color/transparent"
            android:dividerHeight="@dimen/app_list_margin"
            android:fastScrollEnabled="true" />

        <com.assignit.android.ui.views.CustomTextView
            android:id="@+id/noMatchFoundView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/no_match_found"
            android:textColor="@color/login_page_colore"
            android:visibility="gone" />
    </RelativeLayout>

</RelativeLayout>